prima versione del poker con gestione di side pot stabile, messaggi durante la partita da sistemare